Fix phone nubmers, add spacing between contact in footer

--- a/src/scss/components/footer.scss
+++ b/src/scss/components/footer.scss
@@ -79,7 +79,9 @@
     text-align: center;
     @media screen and (max-width: 1024px) {
       margin-bottom: 30px;
+      &.mb60 {
+        margin-bottom: 60px;
+      }
     }
   }
-
 }
